--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/platform-server": "^17.0.7",
     "@angular/router": "^17.0.0",
+    "bootstrap": "^5.3.2",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.29.4",
     "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -38,7 +40,6 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.4.32",
-    "tailwindcss": "^3.4.0",
     "typescript": "~5.2.2"
   }
 }
