--- a/package.json
+++ b/package.json
@@ -19,8 +19,13 @@
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/platform-server": "^17.0.7",
     "@angular/router": "^17.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^16.0.0",
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.2",
     "jwt-decode": "^4.0.0",
     "moment": "^2.29.4",
+    "ng-bootstrap": "^1.6.3",
     "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -30,6 +35,7 @@
     "@angular-devkit/build-angular": "^17.0.5",
     "@angular/cli": "^17.0.5",
     "@angular/compiler-cli": "^17.0.0",
+    "@angular/localize": "^17.0.0",
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.16",
     "bootstrap": "^5.3.2",
